package structural.decorator.coffeeShop.receipt;

/**
 * Receipt interface for printing order details.
 */
public interface Receipt {
	
	/**
	 * Prints the receipt details.
	 * 
	 * @return A string representation of the receipt.
	 */
	String print();

}
